exports[`invalid(1): #dialog, .dialog { & .close {} } 1`] = `

  1 | #dialog, .dialog { & .close {} }

`;

exports[`invalid(1): #dialog, .dialog { & .close {} } 2`] = `

Message:
> 1 | #dialog, .dialog { & .close {} }
    |                    ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(10): :nth-child(2n of #dialog), #modal { & .close {} } 1`] = `

  1 | :nth-child(2n of #dialog), #modal { & .close {} }

`;

exports[`invalid(10): :nth-child(2n of #dialog), #modal { & .close {} } 2`] = `

Message:
> 1 | :nth-child(2n of #dialog), #modal { & .close {} }
    |                                     ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(11): :host(#dialog), #modal { & .close {} } 1`] = `

  1 | :host(#dialog), #modal { & .close {} }

`;

exports[`invalid(11): :host(#dialog), #modal { & .close {} } 2`] = `

Message:
> 1 | :host(#dialog), #modal { & .close {} }
    |                          ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(12): &, :hover { .close {} } 1`] = `

  1 | &, :hover { .close {} }

`;

exports[`invalid(12): &, :hover { .close {} } 2`] = `

Message:
> 1 | &, :hover { .close {} }
    |             ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(13): *|dialog, |* { & .close {} } 1`] = `

  1 | *|dialog, |* { & .close {} }

`;

exports[`invalid(13): *|dialog, |* { & .close {} } 2`] = `

Message:
> 1 | *|dialog, |* { & .close {} }
    |                ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(14): @scope (.root) { #dialog, .dialog { .close {} } } 1`] = `

  1 | @scope (.root) { #dialog, .dialog { .close {} } }

`;

exports[`invalid(14): @scope (.root) { #dialog, .dialog { .close {} } } 2`] = `

Message:
> 1 | @scope (.root) { #dialog, .dialog { .close {} } }
    |                                     ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(15): @scope (.root) { #dialog, > .dialog { .close {} } } 1`] = `

  1 | @scope (.root) { #dialog, > .dialog { .close {} } }

`;

exports[`invalid(15): @scope (.root) { #dialog, > .dialog { .close {} } } 2`] = `

Message:
> 1 | @scope (.root) { #dialog, > .dialog { .close {} } }
    |                                       ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(16): #dialog, .dialog { @MEDIA (width > 40rem) { & .close {} } } 1`] = `

  1 | #dialog, .dialog { @MEDIA (width > 40rem) { & .close {} } }

`;

exports[`invalid(16): #dialog, .dialog { @MEDIA (width > 40rem) { & .close {} } } 2`] = `

Message:
> 1 | #dialog, .dialog { @MEDIA (width > 40rem) { & .close {} } }
    |                                             ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(17): .root { :where(&), & { .child {} } } 1`] = `

  1 | .root { :where(&), & { .child {} } }

`;

exports[`invalid(17): .root { :where(&), & { .child {} } } 2`] = `

Message:
> 1 | .root { :where(&), & { .child {} } }
    |                        ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(18): .root { :is(:unknown(&), .bar), &:hover { .child {} } } 1`] = `

  1 | .root { :is(:unknown(&), .bar), &:hover { .child {} } }

`;

exports[`invalid(18): .root { :is(:unknown(&), .bar), &:hover { .child {} } } 2`] = `

Message:
> 1 | .root { :is(:unknown(&), .bar), &:hover { .child {} } }
    |                                           ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(19): .root { > &, & { .child {} } } 1`] = `

  1 | .root { > &, & { .child {} } }

`;

exports[`invalid(19): .root { > &, & { .child {} } } 2`] = `

Message:
> 1 | .root { > &, & { .child {} } }
    |                  ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(2): #dialog, .dialog { .close {} } 1`] = `

  1 | #dialog, .dialog { .close {} }

`;

exports[`invalid(2): #dialog, .dialog { .close {} } 2`] = `

Message:
> 1 | #dialog, .dialog { .close {} }
    |                    ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(20): #root, .root { .child { .grandchild {} } } 1`] = `

  1 | #root, .root { .child { .grandchild {} } }

`;

exports[`invalid(20): #root, .root { .child { .grandchild {} } } 2`] = `

Message:
> 1 | #root, .root { .child { .grandchild {} } }
    |                ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(21): #dialog,\n.dialog {\n\t& .close {}\n\t& .submit {}\n} 1`] = `

  1 | #dialog,
  2 | .dialog {
  3 | 	& .close {}
  4 | 	& .submit {}
  5 | }

`;

exports[`invalid(21): #dialog,\n.dialog {\n\t& .close {}\n\t& .submit {}\n} 2`] = `

Message:
  1 | #dialog,
  2 | .dialog {
> 3 | 	& .close {}
    | 	^^^^^^^^ Do not nest rules under selector lists with mixed specificity.
  4 | 	& .submit {}
  5 | }

`;

exports[`invalid(21): #dialog,\n.dialog {\n\t& .close {}\n\t& .submit {}\n} 3`] = `

Message:
  1 | #dialog,
  2 | .dialog {
  3 | 	& .close {}
> 4 | 	& .submit {}
    | 	^^^^^^^^^ Do not nest rules under selector lists with mixed specificity.
  5 | }

`;

exports[`invalid(22): #dialog,\n.dialog {\n\t@media (width > 40rem) {\n\t\t@layer components {\n\t\t\t& .close {}\n\t\t}\n\t}\n} 1`] = `

  1 | #dialog,
  2 | .dialog {
  3 | 	@media (width > 40rem) {
  4 | 		@layer components {
  5 | 			& .close {}
  6 | 		}
  7 | 	}
  8 | }

`;

exports[`invalid(22): #dialog,\n.dialog {\n\t@media (width > 40rem) {\n\t\t@layer components {\n\t\t\t& .close {}\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | #dialog,
  2 | .dialog {
  3 | 	@media (width > 40rem) {
  4 | 		@layer components {
> 5 | 			& .close {}
    | 			^^^^^^^^ Do not nest rules under selector lists with mixed specificity.
  6 | 		}
  7 | 	}
  8 | }

`;

exports[`invalid(23): .root { #dialog, .dialog { .close {} } } 1`] = `

  1 | .root { #dialog, .dialog { .close {} } }

`;

exports[`invalid(23): .root { #dialog, .dialog { .close {} } } 2`] = `

Message:
> 1 | .root { #dialog, .dialog { .close {} } }
    |                            ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(24): .root { &&, & { .close {} } } 1`] = `

  1 | .root { &&, & { .close {} } }

`;

exports[`invalid(24): .root { &&, & { .close {} } } 2`] = `

Message:
> 1 | .root { &&, & { .close {} } }
    |                 ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(25): #dialog::before, .dialog { #inner, .inner { .grandchild {} } } 1`] = `

  1 | #dialog::before, .dialog { #inner, .inner { .grandchild {} } }

`;

exports[`invalid(25): #dialog::before, .dialog { #inner, .inner { .grandchild {} } } 2`] = `

Message:
> 1 | #dialog::before, .dialog { #inner, .inner { .grandchild {} } }
    |                                             ^^^^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(3): #dialog, .dialog { &::before {} } 1`] = `

  1 | #dialog, .dialog { &::before {} }

`;

exports[`invalid(3): #dialog, .dialog { &::before {} } 2`] = `

Message:
> 1 | #dialog, .dialog { &::before {} }
    |                    ^^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(4): #dialog, .dialog { ::before {} } 1`] = `

  1 | #dialog, .dialog { ::before {} }

`;

exports[`invalid(4): #dialog, .dialog { ::before {} } 2`] = `

Message:
> 1 | #dialog, .dialog { ::before {} }
    |                    ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(5): button, .button { & .icon {} } 1`] = `

  1 | button, .button { & .icon {} }

`;

exports[`invalid(5): button, .button { & .icon {} } 2`] = `

Message:
> 1 | button, .button { & .icon {} }
    |                   ^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(6): [open], dialog { & .close {} } 1`] = `

  1 | [open], dialog { & .close {} }

`;

exports[`invalid(6): [open], dialog { & .close {} } 2`] = `

Message:
> 1 | [open], dialog { & .close {} }
    |                  ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(7): :hover, dialog { & .close {} } 1`] = `

  1 | :hover, dialog { & .close {} }

`;

exports[`invalid(7): :hover, dialog { & .close {} } 2`] = `

Message:
> 1 | :hover, dialog { & .close {} }
    |                  ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(8): :where(#dialog), :is(.dialog, #dialog) { & .close {} } 1`] = `

  1 | :where(#dialog), :is(.dialog, #dialog) { & .close {} }

`;

exports[`invalid(8): :where(#dialog), :is(.dialog, #dialog) { & .close {} } 2`] = `

Message:
> 1 | :where(#dialog), :is(.dialog, #dialog) { & .close {} }
    |                                          ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(9): :is(::before, *), div { & .close {} } 1`] = `

  1 | :is(::before, *), div { & .close {} }

`;

exports[`invalid(9): :is(::before, *), div { & .close {} } 2`] = `

Message:
> 1 | :is(::before, *), div { & .close {} }
    |                         ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;
